--- a/test-output/testng.css
+++ b/test-output/testng.css
@@ -1,7 +1,7 @@
 .invocation-failed,  .test-failed  { background-color: #DD0000; }
 .invocation-percent, .test-percent { background-color: #006600; }
 .invocation-passed,  .test-passed  { background-color: #00AA00; }
-.invocation-skipped, 
+.
 
 .main-page {
   font-size: x-large;
